tests/snapshots/validate__an_invalid_colour_points_at_the_colour.snap
---
source: tests/validate.rs
expression: output.stderr
---
gh_settings::config::invalid

  x configuration has 1 error
   ,-[[CONFIG]:4:12]
 2 | labels:
 3 |   - name: bug
 4 |     color: nothex
   :            ^^^|^^
   :               `-- expected six hexadecimal digits
   `----
  help: colours look like `d73a4a`, optionally prefixed with `#`
