tests/snapshots/validate__an_invalid_variable_name_points_at_the_name.snap
---
source: tests/validate.rs
expression: output.stderr
---
gh_settings::config::invalid

  x configuration has 1 error
   ,-[[CONFIG]:3:11]
 1 | version: 1
 2 | variables:
 3 |   - name: 9lives
   :           ^^^|^^
   :              `-- invalid name
 4 |     value: x
   `----
  help: names may contain only letters, digits and underscores, and may not
        start with a digit
