tests/snapshots/validate__an_unknown_field_suggests_a_correction.snap
---
source: tests/validate.rs
expression: output.stderr
---
gh_settings::config::parse

  x repository: unknown field `descriptoin`
   ,-[[CONFIG]:3:3]
 1 | version: 1
 2 | repository:
 3 |   descriptoin: x
   :   ^^^^^|^^^^^
   :        `-- unknown field
   `----
  help: did you mean `description`?
