tests/snapshots/validate__duplicate_labels_are_reported_with_both_locations.snap
---
source: tests/validate.rs
expression: output.stderr
---
gh_settings::config::invalid

  x configuration has 1 error
   ,-[[CONFIG]:5:11]
 3 |   - name: bug
 4 |     color: d73a4a
 5 |   - name: BUG
   :           ^|^
   :            `-- already declared at labels.0
 6 |     color: cccccc
   `----
  help: label names are case-insensitive on GitHub; remove the duplicate
