tests/snapshots/validate__every_problem_is_reported_at_once.snap
---
source: tests/validate.rs
expression: output.stderr
---
gh_settings::config::invalid

  x configuration has 3 errors
   ,-[[CONFIG]:4:12]
 2 | labels:
 3 |   - name: bug
 4 |     color: zzz
   :            ^|^
   :             `-- expected six hexadecimal digits
 5 |   - name: BUG
   :           ^|^
   :            `-- already declared at labels.0
 6 |     color: qqq
   :            ^|^
   :             `-- expected six hexadecimal digits
   `----
  help: label names are case-insensitive on GitHub; remove the duplicate
        colours look like `d73a4a`, optionally prefixed with `#`
