tests/snapshots/validate__malformed_yaml_is_reported_clearly.snap
---
source: tests/validate.rs
expression: output.stderr
---
gh_settings::config::parse

  x did not find expected '-' indicator
   ,-[[CONFIG]:3:4]
 1 | labels:
 2 |   - name: bug
 3 |    color: broken indent
   :    |
   :    `-- invalid
   `----
