tests/snapshots/validate__prevent_self_review_without_reviewers_is_only_a_warning.snap
---
source: tests/validate.rs
expression: output.stderr
---
gh_settings::config::invalid

  ! configuration has 1 warning
   ,-[[CONFIG]:5:26]
 3 |   - name: staging
 4 |     reviewers: []
 5 |     prevent_self_review: true
   :                          ^^|^
   :                            `-- `prevent_self_review` has no effect without reviewers
   `----
  help: add `reviewers`, or remove the flag
